Bug 263268 - Album covers no longer appear in collection tree for media devices (ipod touch)
Summary: Album covers no longer appear in collection tree for media devices (ipod touch)
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/iPod iPhone (other bugs)
Version First Reported In: 2.4-GIT
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 2.4.1
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-15 23:39 UTC by manu.wagner
Modified: 2011-12-20 11:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description manu.wagner 2011-01-15 23:39:52 UTC
Version:           2.4-GIT (using KDE 4.5.5) 
OS:                Linux



Reproducible: Always

Steps to Reproduce:
launch amarok
connect an ipod handling album covers (ipod touch 2G)
covers do not appear in the device collection tree anymore

Actual Results:  
no covers displayed in tree

Expected Results:  
covers should be displayed in tree if present on device

there was a previous bug, causing amarok not to send covers to ipods anymore.
This has been fixed, luckily.
However, we would like covers to appear in the collection tree also, as they used to.
Comment 1 Matěj Laitl 2011-10-20 13:02:42 UTC
I'm suffering from the similar, but not the same problem - when songs are first copied to iPod (nano 4g), the covers are okay, but they disapprear from both iPod and Amarok collection browser if I add new songs to iPod the other day.

Do you see similar effecs, or do your covers stay on iPod forever?
Comment 2 Matěj Laitl 2011-10-27 13:20:41 UTC
Git commit d4379722f07535608d1fb160f1d8ca6141a7598b by Matěj Laitl.
Committed on 27/10/2011 at 13:37.
Pushed by laitl into branch 'master'.

Rework MediaDeviceAlbum cover-related functions, remove "Unset Cover"

There was a logic error in MediaDeviceAlbum::image() method which was
the cause of bug 263268, this is fixed and cover setting functions are
cleaned-up.

The "Unset cover" MediaDeviceAlbum action never worked, so remove it
from GUI and remove related stub methods. I believe the functionality
is so little used on media devices so it is not worth implementing it
(yet).

BUG: 263268
FIXED-IN: 2.5

M  +16   -20   src/core-impl/collections/mediadevicecollection/MediaDeviceMeta.cpp
M  +1    -2    src/core-impl/collections/mediadevicecollection/MediaDeviceMeta.h

http://commits.kde.org/amarok/d4379722f07535608d1fb160f1d8ca6141a7598b